--- a/Kursach/Views/Shared/_Layout.cshtml
+++ b/Kursach/Views/Shared/_Layout.cshtml
@@ -4,12 +4,12 @@
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8"/>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title – приложение ASP.NET</title>
+    <title>Фильмотека</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
 </head>
 <body>
-    <div class="navbar navbar-inverse navbar-fixed-top">
+    <div class="navbar navbar-default navbar-fixed-top">
         <div class="container">
             <div class="navbar-header">
                 <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
@@ -17,11 +17,12 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("Имя приложения", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Фильмотека", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Домашняя страница", "Index", "Home")</li>
+                    <li>@Html.ActionLink("Рекомендации", "Recomendation", "Home")</li>
                 </ul>
                 @Html.Partial("_LoginPartial")
             </div>
@@ -31,15 +32,11 @@
         @RenderBody()
         <hr />
         <footer>
-            @if (Request.IsAuthenticated)
+            @if (User.IsInRole("admin"))
             {
                 @Html.ActionLink("Управление ролями", "Index", "Roles")
             }
-            @if (User.IsInRole("admin"))
-            {
-                <p>пидор</p>
-            }
-            <p>&copy; @DateTime.Now.Year – приложение ASP.NET</p>
+            <p>&copy; @DateTime.Now.Year – на базе ASP.NET</p>
         </footer>
     </div>
 
