--- a/Kursach/Views/Home/Index.cshtml
+++ b/Kursach/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 <h2>Список картин</h2>
 
 <div>
-    <table class="table table-bordered">
+    <table class="table table-striped">
         <thead>
             <tr>
                 <th>Название фильма</th>
@@ -18,32 +18,31 @@
             @foreach (var item in Model)
             {
                 <tr>
-                    <td>@Html.DisplayFor(modelItem => item.Title)</td>
+                    <td>@Html.ActionLink(item.Title, "Movie", "Home", new { id = item.MovieID }, null)</td>
                     <td>@Html.DisplayFor(modelItem => item.Genres)</td>
-                    <td>
-                    @if (Request.IsAuthenticated)
-                    {
-                        using (Html.BeginForm())
+                    <td class="col-md-2">
+                        @if (Request.IsAuthenticated)
                         {
-                            <input type="hidden" value="0" name="InnerUserID" />
-                            <input type="text" name="Rating" />
-                            <input type="hidden" value="@item.MovieID" name="MovieID" />
-                            <input type="submit" value="Отправить" />
-                            <!--<div class="form-group col-xs-3">
-                                <label for="Rating">Оценка:</label>
-                                <input type="text" class="form-control" id="Rating">
-                                <button type="submit" class="btn btn-default">Отправить</button>
-                            </div>-->
+                            using (Html.BeginForm())
+                            {
+                                <input type="hidden" value="0" name="InnerUserID" />
+                                <input type="hidden" value="@item.MovieID" name="MovieID" />
+                                <div class="input-group">
+                                    <input class="form-control" id="Rating">
+                                    <span class="input-group-btn">
+                                        <button type="submit" class="btn btn-default">Отправить</button>
+                                    </span>
+                                </div>
+                            }
                         }
-                    }
-                    //else if ()
-                    //{
+                        //else if ()
+                        //{
 
-                    //}
-                    else
-                    {
-                        @Html.ActionLink("Вход", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "btn btn-default" })
-                    }
+                        //}
+                        else
+                        {
+                            @Html.ActionLink("Вход", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "btn btn-default" })
+                        }
                     </td>
                 </tr>
             }
