--- a/Kursach/Views/Home/Recomendation.cshtml
+++ b/Kursach/Views/Home/Recomendation.cshtml
@@ -3,5 +3,34 @@
     ViewBag.Title = "Recomendation";
 }
 
-<h2>Recomendation</h2>
+<h2>Персональные рекомендации</h2>
 
+<div class="alert alert-info">
+    <button type="button" class="close" data-dismiss="alert">&times;</button>
+    На данной странице вы можете посмотреть персональные рекомендации, построенные на основе ваших оценок. 
+    Чем чаще вы голосуете, тем лучше результат рекомендаций.
+</div>
+
+<table class="table table-striped">
+    <thead>
+        <tr>
+            <th>Имя фильма</th>
+            <th>Коэффициент схожести</th>
+        </tr>
+    </thead>
+    <tbody>
+        @for (int i = 0; i < ViewBag.movieTitle.Length; i++)
+        {
+            <tr>
+                <td>@ViewBag.movieTitle[i]</td>
+                <td>
+                    <div class="progress">
+                        <div class="progress-bar @ViewBag.progressBarType[i]" role="progressbar" style="width:@ViewBag.recommendationCoefficient[i]">
+                            @ViewBag.recommendationCoefficient[i]
+                        </div>
+                    </div>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
