--- a/Kursach/Views/Shared/_Layout.cshtml
+++ b/Kursach/Views/Shared/_Layout.cshtml
@@ -36,7 +36,7 @@
             {
                 @Html.ActionLink("Управление ролями", "Index", "Roles")
             }
-            <p>&copy; @DateTime.Now.Year – на базе ASP.NET</p>
+            <p>Рекомендательная система на базе коллаборативной фильтрации. На базе ASP.NET</p>
         </footer>
     </div>
 
