--- a/Kursach/Views/Home/Movie.cshtml
+++ b/Kursach/Views/Home/Movie.cshtml
@@ -1,7 +1,41 @@
-﻿
+﻿@model Kursach.Models.MovieRecord
 @{
-    ViewBag.Title = "Movie";
+    ViewBag.Title = "Информация о фильме";
 }
 
-<h2>Movie</h2>
+<div class="row">
+    <div class="col-md-4">
+        <img src="https://image.tmdb.org/t/p/w500/@Model.poster_path" class="img-responsive"> 
+    </div>
+    <div class="col-md-8 well-lg">
+        <h2>@Model.title</h2>
+        <p>@Model.overview</p>
+    </div>
+</div>
 
+<div class="row">
+    <div class="col-md-offset-9 col-md-3">
+        @if (ViewBag.isViewed)
+        {
+            <p class="text-success text-center list-inline">Фильм оценен</p>
+        }
+        else if (Request.IsAuthenticated)
+        {
+            using (Html.BeginForm("Index", "Home", FormMethod.Post))
+            {
+                <input type="hidden" value="0" name="InnerUserID" />
+                <input type="hidden" value="@ViewBag.movieID" name="MovieID" />
+                <div class="input-group">
+                    <input class="form-control" name="Rating">
+                    <span class="input-group-btn">
+                        <button type="submit" class="btn btn-default">Отправить</button>
+                    </span>
+                </div>
+            }
+        }
+        else
+        {
+            @Html.ActionLink("Вход", "Login", "Account", routeValues: null, htmlAttributes: new { @class = "btn btn-default" })
+        }
+    </div>
+</div>
